# gh-ai-app

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose-deploy.yaml  docker-compose.example.yaml  http.http
.github/workflows/: deploy.yml
files/: cert.pem  public.pem
sandbox/: docker-compose.yaml  run.sh
sandbox/.docker/: readme.md
sandbox/.docker/nginx/: cert.pem  key.pem
sandbox/kubernets/: Dockerfile  start.sh
src/: main.rs
src/config/: environment.rs
src/http/: error_handling.rs  mod.rs  routes.rs
src/http/infra/: health.rs
src/http/ollama/: chat_collection_handler.rs  chat_handler.rs  chat_pdf_handler.rs  config_routes.rs  delete_model_handler.rs  embedding_handler.rs  generate_handler.rs  list_models_handler.rs  mod.rs  pull_model_handler.rs  running_models_handler.rs
