[package]
name = "ghelere-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy="0.15.7"
axum = { version = "0.7.9", features = ["tracing", "macros","multipart"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
axum-extra = { version = "0.9.6"}
rustls = "0.23.19"
tower-http = {version = "0.6.2",features = ["full"]}
http = "1.2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

reqwest = { version = "0.12.9", features = ["json"] }
uuid = { version = "1.11.0", features = [
  "v7",
  "fast-rng",
  "macro-diagnostics",
  "serde",
  "std",
] }
anyhow ="1.0.93"

langchain-rust = {version ="4.6.0", features = ["postgres", "ollama", "pdf-extract"]}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio="1.41.1"
futures-util = "0.3.31"
unicode-segmentation = "1.12.0"
futures = "0.3.31"
async-trait = "0.1.83"
chrono = "0.4.38"
text-splitter = { version = "0.19.0", features = ["tiktoken-rs", "markdown"] }